# geany-zencoding

./: .gitignore  Makefile.am  README.markdown  autogen.sh  configure.ac
data/: Makefile.am  README.icons  example.conf
src/: Makefile.am  plugin.c  zen-controller.c  zen-controller.h  zen-editor.c  zen-editor.h  zen-engine.c  zen-engine.h
zencoding/: Makefile.am  engine.py.in  html_matcher.py  zen_core.py  zen_settings.py
zencoding/actions/: Makefile.am
zencoding/filters/: Makefile.am
zencoding/interface/: Makefile.am
zencoding/parser/: Makefile.am
